--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <h1>hello world </h1>
+    <h1>hii,this is an edited file </h1>
     <h2>SE LAB </h2>
+    <h2>sumit </h2>
+
 </body>
 
 </html>
